# obsvty

./: .coveragerc  .env.example  .gitignore  CODE_OF_CONDUCT.md  Dockerfile  README.md  generate_protos.py  pyproject.toml  pytest.ini  setup_dev_environment.sh  tasks.py  tox.ini
.trae/rules/: project_rules.md
ai-docs/: README.md
ai-docs/code-review/: obs-14-review-initial-otlp-setup.md  obs-8-otlp-grpc-ingestion-review.md
ai-docs/context/: obs-14-context-stack-initial-otlp-setup.md  obs-15-context-stack-otlp-grpc-implementation.md  obs-16-context-stack-parsing-validation-otlp-data.md  obs-17-context-stack-buffer-storage-implementation.md  obs-18-context-stack-config-doc-specification.md  obs-19-context-stack-validation-criteria-specification.md  obs-8-context-stack-otlp-grpc-ingestion-implementation.md  otlp-grpc-setup-context.md
ai-docs/prp/: 001-prp-otlp-grpc-setup.md  obs-14-initial-otlp-setup.md  obs-15-otlp-grpc-server-implementation.md  obs-16-otlp-parsing-validation-implementation.md  obs-17-buffer-storage-implementation.md  obs-18-config-doc-implementation.md  obs-19-validation-criteria-implementation.md  obs-8-otlp-grpc-ingestion-implementation.md
ai-docs/prp/analysis/: obs-8-otlp-grpc-analysis.md
ai-docs/prp/refinement/: obs-8-otlp-grpc-ingestion.md  obs-8-receive-otlp-data-via-grpc.md
ai-docs/rules/: architecture-solid-principles.md  core-architecture-principles.md  core-principles.mdc  ddd-core-principles.md  dependency-injection-python.md  domain-model-implementation.md  event-driven-cqrs-python.md  exception-hierarchy.mdc  functional-code-imperative-shell.md  immutability-value-objects.mdc  immutable-value-objects.md  naming-conventions-style.md  package-and-module-architecture.md  package-modularity.mdc  performance-observability.mdc  ports-adapters-architecture.mdc  privacy-first.mdc  project-structure.md  python-toolchain-standards.md  refactoring-practices.md  service-layer-design.md  solid-python-implementation.md  testing-quality.md  testing-safety-net.mdc  testing-strategy.md
ai-docs/tasks/: obs-15-otlp-grpc-server-implementation.md  obs-8-otlp-grpc-ingestion.md
ai-docs/templates/code-review/: code-review-template.md
ai-docs/templates/context/: base-context-stack.md  iterative-refinement.md  validation-checklist.md
ai-docs/templates/prp/: prp-analysis.md  prp-backend.md  prp-base.md
docs/: CONTRIBUTING.md  otlp-configuration-guide.md
examples/: otlp_client.py
obsvty/src/obsvty/: main.py
obsvty/src/obsvty/application/ports/: otlp_ports.py
obsvty/src/obsvty/infrastructure/otlp/: grpc_server.py
obsvty/tests/unit/application/dto/: test_otlp_dto.py
obsvty/tests/unit/application/ports/: test_otlp_ports.py
obsvty/tests/unit/domain/services/: test_otlp_processing.py  test_otlp_processing_comprehensive.py
src/obsvty/: __init__.py  __main__.py  config.py  main.py
src/obsvty/adapters/messaging/: __init__.py  otlp_grpc.py
src/obsvty/adapters/messaging/proto/: .keep
src/obsvty/application/: buffer_management.py
src/obsvty/application/dto/: otlp_dto.py
src/obsvty/application/services/: otlp_parsing_service.py
src/obsvty/config/: __init__.py  settings.py
src/obsvty/domain/: __init__.py  observability.py
src/obsvty/domain/exceptions/: __init__.py
src/obsvty/domain/models/: otlp.py
src/obsvty/domain/services/: otlp_processing.py
src/obsvty/infrastructure/buffer/: memory_buffer.py
src/obsvty/infrastructure/otlp/: trace_service.py
src/obsvty/ports/: __init__.py  buffer.py  messaging.py  storage.py
src/obsvty/use_cases/: __init__.py  process_trace.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/integration/adapters/: test_otlp_endpoint_integration.py  test_otlp_grpc.py
tests/integration/otlp/: test_grpc_endpoints.py  test_grpc_endpoints_comprehensive.py
tests/unit/: test_main_composition.py  test_setup_validation.py
tests/unit/adapters/: test_otlp_adapter_parsing.py  test_otlp_grpc.py
tests/unit/application/: test_buffer_management.py  test_buffer_thread_safety.py  test_comprehensive_buffer_management.py  test_trace_parsing_buffer_storage.py
tests/unit/application/ports/: test_buffer.py
tests/unit/application/services/: test_otlp_parsing_service.py
tests/unit/config/: test_settings.py
tests/unit/domain/: test_observability.py  test_protocol_validation.py
tests/unit/domain/models/: test_otlp.py
tests/unit/ports/: test_ports_contracts.py
tests/unit/use_cases/: test_process_trace.py
