[tool.poetry]
name = "obsvty"
version = "0.1.0"
description = "Observability and context engineering framework"
authors = ["Fernando Júnior <contato@fernandojr.dev>"]
readme = "README.md"
packages = [
    { include = "obsvty" },
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "2.9.2"
grpcio = "1.76.0"
grpcio-tools = "1.76.0"
grpcio-reflection = "1.76.0"
protobuf = "6.33.0"
pydantic-settings = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "8.4.2"
pytest-cov = "5.0.0"
ruff = "0.8.6"
mypy = "1.18.2"
safety = ">=2.5.0"
bandit = "^1.7.8"
pre-commit = "4.3.0"
tomli = "2.0.1"
opentelemetry-proto = "1.38.0"
tox = "^4.32.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
target-version = "py311"
extend-exclude = [
    "obsvty/src/obsvty/adapters/messaging/generated",
]

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the EOL from the input.
line-ending = "auto"

[tool.pytest.ini_options]
python_files = ["test_*.py"]
testpaths = ["obsvty/tests/unit", "obsvty/tests/integration", "obsvty/tests/e2e"]
addopts = "-v --tb=short --strict-markers --disable-warnings --cov=obsvty/src --cov-report=html --cov-report=term-missing --cov-fail-under=80"
markers = [
    "unit: Unit tests (no external dependencies, target Functional Core only)",
    "integration: Integration tests (test Core + Adapter combinations)", 
    "e2e: End-to-end tests (full workflow validation)",
    "slow: Tests that take more than 1 second"
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning"
]

[tool.coverage.run]
source = ["obsvty/src/"]
omit = [
    "*/__pycache__/*",
    "*/obsvty/tests/*", 
    "*/venv/*",
    "*/.venv/*",
    "*/adapters/messaging/generated/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError", 
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if settings.debug:",
    "if 0:",
    "if __debug__:"
]
precision = 2
show_missing = true
skip_covered = false
fail_under = 80

[tool.mypy]
strict = true
mypy_path = ["."]
files = ["obsvty/src"]
exclude = "obsvty/src/obsvty/adapters/messaging/generated/.*"

[[tool.mypy.overrides]]
module = [
    "google.protobuf",
    "google.protobuf.*",
    "grpc",
    "grpc.*",
    "grpc_health",
    "grpc_health.*",
    "grpc_reflection",
    "grpc_reflection.*",
    "grpc_reflection.v1alpha",
    "dotenv",
    "dotenv.*",
    "opentelemetry.*",
    "opentelemetry.proto.*",
    "opentelemetry.proto.collector.*",
    "opentelemetry.proto.collector.trace.v1.*",
    "opentelemetry.proto.collector.metrics.v1.*",
    "opentelemetry.proto.collector.logs.v1.*",
    "opentelemetry.proto.trace.v1.*",
]
ignore_missing_imports = true

[tool.bandit]
skips = ["B101"]  # Skip assert checks in tests
exclude_dirs = ["obsvty/tests", "venv", ".venv", ".tox"]
